--- a/.gitconfig
+++ b/.gitconfig
@@ -19,7 +19,7 @@
 	cmd = /Applications/SourceTree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
 	trustExitCode = true
 [push]
-	default = simple
+	default = current
 [help]
 	autocorrect=1
 [filter "media"]
